Fix extra space at the bottom of the panel

--- a/styles/working-files.less
+++ b/styles/working-files.less
@@ -6,14 +6,14 @@
 		// overflow: auto;
 		padding-left: 0px;
 		padding-right: 0px;
-
+		
 		li.list-item {
 			margin-left: 0px;
 			line-height: 1.7em;
 		}
 
 		ul.tool-panel {
-			margin-bottom: 2px;
+			margin-bottom: 4px;
 		}
 	}
 
@@ -30,7 +30,6 @@
 	flex: 0 0 1;
 	position: relative;
 	order: 0;
-	margin-bottom: 2px;
 
 
 
